--- a/html/login.html
+++ b/html/login.html
@@ -89,12 +89,12 @@
         .getElementById("googleLogin")
         .addEventListener("click", signInWithGoogle);
 
-      //   // 자동 로그인 체크
-      //   firebase.auth().onAuthStateChanged((user) => {
-      //     if (user) {
-      //       window.location.href = "app.html";
-      //     }
-      //   });
+      // 자동 로그인 체크
+      firebase.auth().onAuthStateChanged((user) => {
+        if (user) {
+          window.location.href = "app.html";
+        }
+      });
     </script>
   </body>
 </html>
