--- a/Index.html
+++ b/Index.html
@@ -15,10 +15,12 @@
     <div class="landing-container">
       <nav class="nav-bar">
         <div class="logo">
-          <img src="assets/logo.svg" alt="서석 로고" class="animate-fade-in" />
+          <img src="/assets/logo.svg" alt="서석 로고" class="animate-fade-in" />
           <span class="animate-slide-up">서석</span>
         </div>
-        <a href="login.html" class="login-btn animate-fade-in">시작하기</a>
+        <a href="/html/login.html" class="login-btn animate-fade-in"
+          >시작하기</a
+        >
       </nav>
 
       <main class="hero-section">
@@ -33,7 +35,7 @@
           ⚡️ 빠르고 정확한 분석으로 시간을 절약하세요
         </p>
         <div class="cta-buttons animate-fade-in-delay">
-          <a href="login.html" class="btn primary">무료로 시작하기</a>
+          <a href="/html/login.html" class="btn primary">무료로 시작하기</a>
           <a href="#features" class="btn secondary">자세히 알아보기</a>
         </div>
       </main>
