--- a/html/login.html
+++ b/html/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>로그인 - 서석</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -18,7 +18,7 @@
     <div class="login-container">
       <div class="login-box animate-fade-in">
         <div class="logo">
-          <img src="assets/logo.svg" alt="서석 로고" class="animate-fade-in" />
+          <img src="/assets/logo.svg" alt="서석 로고" class="animate-fade-in" />
           <h1 class="animate-slide-up">서석</h1>
         </div>
 
@@ -76,7 +76,7 @@
             imageUrl: user.photoURL,
           };
           localStorage.setItem("userData", JSON.stringify(userData));
-          window.location.href = "app.html";
+          window.location.href = "/html/app.html";
         } catch (error) {
           console.error("로그인 오류:", error);
           document.getElementById("errorMessage").textContent =
@@ -92,7 +92,7 @@
       // 자동 로그인 체크
       firebase.auth().onAuthStateChanged((user) => {
         if (user) {
-          window.location.href = "app.html";
+          window.location.href = "/html/app.html";
         }
       });
     </script>
