--- a/html/app.html
+++ b/html/app.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>서석 - AI 문서 분석</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <!-- Firebase SDK 추가 -->
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
@@ -18,7 +18,7 @@
     <div class="app-container">
       <nav class="app-nav">
         <div class="logo">
-          <img src="assets/logo.svg" alt="서석 로고" />
+          <img src="/assets/logo.svg" alt="서석 로고" />
           <span>서석</span>
         </div>
         <div class="user-profile">
@@ -126,6 +126,6 @@
           });
       }
     </script>
-    <script src="js/app.js"></script>
+    <script src="/js/app.js"></script>
   </body>
 </html>
