--- a/html/login.html
+++ b/html/login.html
@@ -96,5 +96,16 @@
         }
       });
     </script>
+    <footer class="footer">
+      <div class="footer-content">
+        <p>© 2024 서석 (Seoseok). All rights reserved.</p>
+        <p>
+          Made with ❤️ by
+          <a href="https://github.com/seojin-dev" target="_blank"
+            >Seojin Kim (김서진)</a
+          >
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
