--- a/Index.html
+++ b/Index.html
@@ -59,5 +59,16 @@
       </section>
     </div>
     <script src="js/animations.js"></script>
+    <footer class="footer">
+      <div class="footer-content">
+        <p>© 2024 서석 (Seoseok). All rights reserved.</p>
+        <p>
+          Made with ❤️ by
+          <a href="https://github.com/seojin-dev" target="_blank"
+            >Seojin Kim (김서진)</a
+          >
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
