--- a/html/app.html
+++ b/html/app.html
@@ -127,5 +127,16 @@
       }
     </script>
     <script src="/js/app.js"></script>
+    <footer class="footer">
+      <div class="footer-content">
+        <p>© 2024 서석 (Seoseok). All rights reserved.</p>
+        <p>
+          Made with ❤️ by
+          <a href="https://github.com/seojin-dev" target="_blank"
+            >Seojin Kim (김서진)</a
+          >
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
