--- a/Index.html
+++ b/Index.html
@@ -13,9 +13,10 @@
   </head>
   <body>
     <div class="landing-container">
-      <nav class="nav-bar">
+      <nav class="app-nav">
+        <!-- nav-bar 클래스를 app-nav로 변경 -->
         <div class="logo">
-          <img src="/assets/logo.svg" alt="서석 로고" class="animate-fade-in" />
+          <img src="assets/logo.svg" alt="서석 로고" class="animate-fade-in" />
           <span class="animate-slide-up">서석</span>
         </div>
         <a href="/html/login.html" class="login-btn animate-fade-in"
