--- a/html/login.html
+++ b/html/login.html
@@ -35,8 +35,9 @@
 
           <div class="login-footer">
             <p>
-              로그인 시 <a href="#">이용약관</a>과
-              <a href="#">개인정보처리방침</a>에 동의하게 됩니다.
+              로그인 시 <a href="/html/terms.html">이용약관</a>과
+              <a href="/html/privacy.html">개인정보처리방침</a>에 동의하게
+              됩니다.
             </p>
           </div>
         </div>
